# first-opengl-prj

./: CMakeLists.txt  README.md
src/: main.cpp  simple.frag  simple.vert
